Add HTTP/SSE proxy support for remote MCP servers
New `quint http-proxy` command proxies HTTP-based MCP servers (Notion,
GitHub, Sentry, etc.) through the same interceptor, policy engine, and
signed audit log as the existing stdio proxy. Zero new dependencies —
uses node:http and built-in fetch().

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "build": "npx tsc -b packages/core packages/proxy packages/cli test",
-    "test": "node --test dist/test/crypto.test.js dist/test/db.test.js dist/test/policy.test.js dist/test/interceptor.test.js dist/test/chain.test.js dist/test/proxy.test.js",
+    "test": "node --test dist/test/crypto.test.js dist/test/db.test.js dist/test/policy.test.js dist/test/interceptor.test.js dist/test/chain.test.js dist/test/proxy.test.js dist/test/http-proxy.test.js",
     "clean": "rm -rf packages/*/dist dist"
   },
   "engines": {
