--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "quint",
+  "name": "@quint/quint-cli",
   "version": "0.1.0",
   "private": true,
   "description": "Local security proxy for MCP tool calls",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/quint/quint-cli.git"
+  },
   "workspaces": [
     "packages/core",
     "packages/proxy",
@@ -12,6 +16,9 @@
     "build": "npx tsc -b packages/core packages/proxy packages/cli test",
     "test": "node --test dist/test/crypto.test.js dist/test/db.test.js dist/test/policy.test.js dist/test/interceptor.test.js dist/test/chain.test.js dist/test/proxy.test.js dist/test/http-proxy.test.js",
     "clean": "rm -rf packages/*/dist dist"
+  },
+  "publishConfig": {
+    "@quint:registry": "https://npm.pkg.github.com"
   },
   "engines": {
     "node": ">=20.0.0"
