Rename packages to @quint-security/*, add GitHub Packages publishing
- Rename @quint/core → @quint-security/core, @quint/proxy →
  @quint-security/proxy, @quint/cli → @quint-security/cli
- Add publishConfig + repository to all package.json files
- Add .npmrc pointing @quint-security scope to GitHub Packages
- Add CI workflow (build + test on push/PR to main)
- Add publish workflow (npm publish on version tags)
- Remove private:true from sub-packages for publishing
- 80/80 tests passing

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,16 +1,23 @@
 {
-  "name": "@quint/cli",
+  "name": "@quint-security/cli",
   "version": "0.1.0",
-  "private": true,
   "bin": {
     "quint": "dist/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Quint-Security/cli.git",
+    "directory": "packages/cli"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   },
   "scripts": {
     "build": "tsc"
   },
   "dependencies": {
-    "@quint/core": "*",
-    "@quint/proxy": "*",
+    "@quint-security/core": "*",
+    "@quint-security/proxy": "*",
     "commander": "^12.0.0"
   },
   "devDependencies": {
