--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,9 +1,16 @@
 {
-  "name": "@quint/core",
+  "name": "@quint-security/core",
   "version": "0.1.0",
-  "private": true,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Quint-Security/cli.git",
+    "directory": "packages/core"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "scripts": {
     "build": "tsc"
   },
