--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@quint/quint-cli",
+  "name": "@quint-security/cli",
   "version": "0.1.0",
   "private": true,
   "description": "Local security proxy for MCP tool calls",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/quint/quint-cli.git"
+    "url": "git+https://github.com/Quint-Security/cli.git"
   },
   "workspaces": [
     "packages/core",
@@ -18,7 +18,7 @@
     "clean": "rm -rf packages/*/dist dist"
   },
   "publishConfig": {
-    "@quint:registry": "https://npm.pkg.github.com"
+    "@quint-security:registry": "https://npm.pkg.github.com"
   },
   "engines": {
     "node": ">=20.0.0"
