Change publishConfig to access:public instead of hardcoded registry
The workflow controls which registry to target via setup-node registry-url.
Having the registry hardcoded in publishConfig was overriding it and sending
all publishes to GitHub Packages even when the workflow pointed to npmjs.org.

--- a/packages/proxy/package.json
+++ b/packages/proxy/package.json
@@ -9,7 +9,7 @@
     "directory": "packages/proxy"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "access": "public"
   },
   "scripts": {
     "build": "tsc"
