Fix npm publish by removing repo .npmrc before publishing to npmjs.org
The checked-in .npmrc redirects @quint-security to GitHub Packages,
which overrides setup-node's registry-url. Deleting it in the publish-npm
job lets the workflow-configured registry take effect.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,6 +27,8 @@ jobs:
           node-version: '20'
           registry-url: 'https://registry.npmjs.org'
           scope: '@quint-security'
+      - name: Remove repo .npmrc to use registry from setup-node
+        run: rm -f .npmrc
       - run: npm ci
       - run: npm run build
       - name: Set version from tag
