Fix release binary workflow: use cross-compile for darwin-x64
macos-13 runner not available. Use macos-latest (arm64) with
bun --target=bun-darwin-x64 to cross-compile for Intel Macs.

--- a/.github/workflows/release-binary.yml
+++ b/.github/workflows/release-binary.yml
@@ -12,10 +12,13 @@ jobs:
         include:
           - os: macos-latest
             target: darwin-arm64
-          - os: macos-13
+            bun_target: bun-darwin-arm64
+          - os: macos-latest
             target: darwin-x64
+            bun_target: bun-darwin-x64
           - os: ubuntu-latest
             target: linux-x64
+            bun_target: bun-linux-x64
 
     runs-on: ${{ matrix.os }}
 
@@ -33,7 +36,7 @@ jobs:
       - run: npm test
 
       - name: Build standalone binary
-        run: bun build packages/cli/dist/index.js --compile --outfile quint
+        run: bun build packages/cli/dist/index.js --compile --target=${{ matrix.bun_target }} --outfile quint
 
       - name: Package binary
         run: |
